# payment-service

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
backend/api/: pyproject.toml
backend/api/src/: auth.py  database.py  main.py  models.py  repository.py  routes.py  schemas.py  settings.py  utils.py
backend/api/src/alembic/: env.py
backend/api/src/alembic/versions/: 371f0bb7bf05_init_payments.py  b9acb25b1d0a_autogenerate.py
backend/common/src/common/: db.py
backend/consumer/: pyproject.toml
backend/consumer/src/: database.py  main.py  payments_worker.py  repository.py  settings.py  webhook.py
backend/publisher/: pyproject.toml
backend/publisher/src/: database.py  main.py  repository.py  settings.py
dockerfiles/: Dockerfile.api  Dockerfile.consumer  Dockerfile.postgres  Dockerfile.publisher  Dockerfile.rabbitmq
scripts/: api-start.sh  common.sh  consumer-start.sh  init-postgres.sh  publisher-start.sh  rabbitmq-entrypoint.sh
